<resources>
    <string name="app_name">BFF_App</string>
    <string name="login">Login</string>
    <string name="login2">Login</string>
    <string name="register">Register</string>
    <string name="register2">Register</string>
    <string name="password">Password</string>
    <string name="password2">Password</string>
    <string name="click_to_register">click_to_register</string>
    <string name="click_to_login">click_to_login</string>
    <string name="logout">logout</string>
    <string name="email">Email</string>
    <string name="click_to_sign_up">Click to Sign Up</string>
    <string name="email2">Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="username">Username</string>
    <string name="loading">Loading...</string>
    <string name="welcome">Welcome!</string>
    <string name="expenses_here">Expenses here...</string>
    <string name="set_up_your_monthly_expenses">Set Up Your Monthly Expenses</string>
    <string name="add_expense_category">Add Expense Category</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="now_let_s_set_up_your_monthly_incomes">Now, let\'s set up your monthly incomes.</string>
    <string name="add_income_category">+ Add Income Category</string>
    <string name="saveandcontinue">Save and Continue</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="email1">Email</string>
    <string name="enter_your_email_to_receive_a_reset_link">Enter your email to receive a reset link.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="b_f_f">B.F.F.</string>
    <string name="my_button">My Button</string>
    <string name="expenses_breakdown">Expenses breakdown</string>
    <string name="b_f_f_1">B.F.F.</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="b_f_f_2">B.F.F.</string>
    <string name="welcome1">Welcome!</string>
    <string name="register_and_create_a_free_account_today">Register and create a free account today.</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="back_to_login1">Back to Login</string>
    <string name="b_f_f_forgot_pass">B.F.F.</string>
    <string name="forgot_your_password_">Forgot your password?</string>
    <string name="enter_your_email_to_receive_a_reset_link_">Enter your email to receive a reset link.</string>
    <string name="email_forgot_pass">Email</string>
    <string name="send_email_">SEND EMAIL</string>
    <string name="back_to_login_">Back to Login</string>
    <string name="logout1">Logout</string>
    <string name="Welcome">welcome</string>
    <string name="welcome_dash">Welcome</string>
    <string name="you_are_over_under_monthly_budget">You are over/under monthly budget</string>
    <string name="yearly_summary">Yearly Summary</string>
    <string name="settings">Settings</string>
    <string name="yearlysummary">Yearly Summary</string>
    <string name="setting">Settings</string>
    <string name="logout_settings">Logout</string>
    <string name="change_username_settings">Change Username</string>
    <string name="update_password_settings">Update Password</string>
    <string name="update_email_settings">Update Email</string>
    <string name="toggle_dark_mode_settings">Toggle Dark Mode</string>
    <string name="current_password">Current Password</string>
    <string name="new_password_reset">New Password</string>
    <string name="confirm_new_password_reset">Confirm New Password</string>
    <string name="current_email_reset">Current Email</string>
    <string name="new_email_reset">New Email</string>
    <string name="confirm_new_email_reset">Confirm New Email</string>
    <string name="password_email_change">Password</string>
    <string name="settings_text">Settings</string>
    <string name="extra_text">Extra</string>
    <string name="goal_title">Goal Title</string>
    <string name="saved_0_00_100_00">Saved: $0.00 / $100.00</string>
    <string name="saved_0_00_100_00_">Saved: $0.00 / $100.00</string>
    <string name="you_don_t_have_any_savings_goals_yet_click_the_button_below_to_add">You don\'t have any savings goals yet, click the button below to add</string>
    <string name="add_goal">Add Goal</string>
    <string name="b_f_f_add_expense">B.F.F.</string>
    <string name="add_expense_s">Add expense(s)</string>
    <string name="add_expense_category_">+ Add expense category</string>
    <string name="save_and_continue_">Save and Continue</string>
    <string name="save_and_continue_add_income">Save and Continue</string>
    <string name="add_income_s">Add income(s)</string>
    <string name="b_f_f_add_income">B.F.F.</string>
    <string name="add_income_s_">Add income(s)</string>
    <string name="add_income_dash">Add Income</string>
    <string name="add_expense_dash">Add Expense</string>
    <string name="back_button_monthly_detail">Back</string>
    <string name="january_month_label">January</string>
    <string name="total_expenses_0_00_monthly_detail">Total Expenses: $0.00</string>
    <string name="total_income_0_00_monthly_detail">Total Income: $0.00</string>
    <string name="goal_save_200_monthly_detail">Goal: Save $200</string>
    <string name="yearly_summary_text">Yearly Summary</string>
    <string name="back_button">Back</string>
    <string name="bills">Bills</string>
    <string name="progressOutline_text">0%</string>
    <string name="progressPercentage_text">0%</string>
    <string name="expense_category_expense_display">Expense Category</string>
    <string name="summary_text">Summary</string>
    <string name="bills_button">Bills Button</string>
    <string name="tracking_button">Tracking Button</string>
    <string name="_0_00_income">₹0.00</string>
    <string name="category_income">Category</string>
    <string name="yyyy_mm_dd_income">YYYY-MM-DD</string>
    <string name="category_transaction">Category</string>
    <string name="_0_00_transaction">$0.00</string>
    <string name="_2025_05_01_transaction">2025-05-01</string>
    <string name="delete">Delete</string>
    <string name="bills_summ">Bills</string>
    <string name="tracking_summ">Tracking</string>
    <string name="dashboard_summ">Dashboard</string>
    <string name="summary_summ">Summary</string>
    <string name="more_summ">More</string>
    <string name="goals_summ">Goals</string>
    <string name="dashboard_dash">Dashboard</string>
    <string name="dashboard_settings">Dashboard</string>
    <string name="summary_settings">Summary</string>
    <string name="goals_settings">Goals</string>
    <string name="more_settings">More</string>
    <string name="dashboard_saving_goals">Dashboard</string>
    <string name="summary_saving_goals">Summary</string>
    <string name="goals_saving_goals">Goals</string>
    <string name="more_saving_goals">More</string>
    <string name="cat">Cat</string>
    <string name="budgeting_friend_forever">Budgeting Friend Forever</string>
    <string name="dashboard_extra">Dashboard</string>
    <string name="summary_extra">Summary</string>
    <string name="more_extra">More</string>
    <string name="goals_extra">Goals</string>
    <string name="_0_00">$0.00</string>
    <string name="manage_income">Manage Income</string>
    <string name="_0_00_dash2">$0.00</string>
    <string name="manage_expenses_dash">Manage Expenses</string>
    <string name="_00_00_dash3">$00.00</string>
    <string name="left_to_spend">Left to spend:</string>
    <string name="_0_00_out_of_0_00">$0.00 out of $0.00</string>
    <string name="dashboard_dash1">Dashboard</string>
    <string name="summary_dash">Summary</string>
    <string name="goals_dash">Goals</string>
    <string name="more_dash">More</string>
    <string name="more_yearly_summ">More</string>
    <string name="goals_yearly_summ">Goals</string>
    <string name="settings_yearly_summ">Settings</string>
    <string name="dashboard_yearly_summ">Dashboard</string>
    <string name="back_goal">Back</string>
    <string name="new_goal_goal">New Goal</string>
    <string name="goal_name_goal">Goal Name</string>
    <string name="description_goal">Description</string>
    <string name="saving_goal_amount_goal">Saving Goal Amount</string>
    <string name="month_goalMonth">Month</string>
    <string name="day_goalsDay">Day</string>
    <string name="year_goalYear">Year</string>
    <string name="add_confirmGoal">Add</string>
    <string name="suggested_goal_suggestionGoal">*Suggested Add Amount*</string>
    <string name="back_suggesteGoal">Back</string>
    <string name="suggested_goal_Title">Suggested Goal</string>
    <string name="to_reach_your_goal_by_the_date_you_should_save_xx_per_pay_period">To reach your goal by the date, you should save $XX per pay period.</string>
    <string name="close_popup">Close</string>
    <string name="no_goals_added_goals">No Goals Added</string>
    <string name="add_goal_button">+ Add Goal</string>
    <string name="back_editGoal">Back</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="goal_name">Goal Name</string>
    <string name="description_Goal">Description</string>
    <string name="edit_saving_goal_Goal">Edit Saving Goal</string>
    <string name="edit_date_goals">Edit Date:</string>
    <string name="month_editGoals">Month</string>
    <string name="day_editGoals">Day</string>
    <string name="year_editGoal">Year</string>
    <string name="save_editGoal">Save</string>
    <string name="back_goalDetail">Back</string>
    <string name="goal_laptop_goalDetail">Goal: Laptop</string>
    <string name="goal_amount_1000_00_goalDetail">Goal Amount: $1000.00</string>
    <string name="amount_saved_250_00_goalDetail">Amount Saved: $250.00</string>
    <string name="amount_left_750_00_goalDetail">Amount Left: $750.00</string>
    <string name="mark_goal_as_completed_goalDetail">Mark Goal as Completed</string>
    <string name="delete_goal_goalDetail">Delete Goal</string>
    <string name="edit_goal_savingGoal">Edit Goal</string>
    <string name="groceries_tracking">Groceries</string>
    <string name="_45_00_tracking">$45.00</string>
    <string name="apr_25_tracking">Apr 25</string>
    <string name="category_popup">Category</string>
    <string name="may_7_2025_popup">May 7, 2025</string>
    <string name="tracking_tracking">Tracking</string>
    <string name="select_target_date_goal">Select Target Date</string>
    <string name="select_target_date_editGoal">Select Target Date</string>
    <string name="username_icon">Username Icon</string>
    <string name="yearly_summary_label">Yearly Summary</string>
    <string name="reoccurring_monthly">Reoccurring Monthly</string>
    <string name="reoccuring_monthly">Reoccuring Monthly?</string>
    <string name="recurring_monthly">Recurring Monthly?</string>
    <string name="update_passwordIcon">Update Password</string>
    <string name="update_password_Label">Update Password</string>
    <string name="update_email_icon">Update Email</string>
    <string name="update_email_label">Update Email</string>
    <string name="dark_mode_button">Dark Mode</string>
    <string name="night_mode_label">Night Mode</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_login">Sign Up</string>
    <string name="enter_email_field">Enter Email</string>
    <string name="goal_date">Goal Date: XX/XX/XX</string>
    <string name="goal_amount_saved">Amount Saved: $0.00 / $X.XX</string>
    <string name="current_savings">Currently Saved: $0.00/$X.XX</string>
    <string name="enter_amount_to_add">Enter amount to add</string>
    <string name="add_to_saved">Add to Saved</string>
</resources>