<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:padding="20dp"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <EditText
        android:id="@+id/currentEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_email_reset"
        android:inputType="textEmailAddress"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email_reset"
        android:inputType="textEmailAddress"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/confirmEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_email_reset"
        android:inputType="textEmailAddress"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_email_change"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>