<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/expenseCategory"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/category"
            android:inputType="text"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/expenseAmount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/deleteExpenseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="#E9E9E9"
            android:textColor="#000000" />

    </LinearLayout>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:text="@string/recurring_monthly"
        />

</LinearLayout>