<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="20dp"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <EditText
        android:id="@+id/currentPassword"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/newPassword"
        android:hint="@string/new_password_reset"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:hint="@string/confirm_new_password_reset"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>