<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/goalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/goalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_0_00_100_00"
            android:textSize="16sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/amountSaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_0_00_100_00_"
            android:textSize="16sp"
            android:layout_marginTop="4dp" />
        <Button
            android:id="@+id/editGoalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_goal_savingGoal"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
