<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/transactionItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/transactionCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_transaction"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/transactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_00_transaction"
            android:textSize="16sp"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/transactionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2025_05_01_transaction"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>